<resources>
    <string name="app_name">Hackbanero</string>
    <string name="textview_seleccionar_estado">Seleccionar estado</string>
    <string name="textview_seleccionar_sector">Seleccionar sector</string>
    <string name="textview_nombre_estado">Nombre Estado</string>
    <string name="textview_seleccionar">Seleccionar</string>
    <string name="textview_periodo_secundario">Periodo</string>
    <string name="textview_producto_sembrado">Seleccionar</string>
    <string name="textview_producto_cosechado">Seleccionar</string>
    <string name="textview_producto_obtenido">Seleccionar</string>
    <string name="textview_indice_manufactura">Indice de crecimiento de la industria -------- </string>
    <string name="textview_periodo_incial_sector">Seleccione un periodo</string>
    <string name="button_realizar_consulta">Consultar</string>
    <string name="button_siguiente">Siguiente</string>
    <string name="perro">Perro</string>
    <string name="gato">Gato</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="sometimes">Algunas veces</string>
</resources>
