<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myapp.hackbanero.hackbanero.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/inegi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_seleccionar_estado"
        android:textSize="20sp"
        android:textColor="#000000"
        android:id="@+id/textView_seleccionarEstado"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerEstados"
        android:background="#848484"
        android:layout_below="@+id/textView_seleccionarEstado"
        android:layout_centerHorizontal="true"
        android:alpha=".9"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_seleccionar_sector"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center"
        android:id="@+id/textView_seleccionarSector"
        android:layout_below="@+id/spinnerEstados"
        android:layout_alignRight="@+id/textView_seleccionarEstado"
        android:layout_alignEnd="@+id/textView_seleccionarEstado"
        android:layout_marginTop="38dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="#848484"
        android:id="@+id/spinnerSectores"
        android:alpha=".9"
        android:layout_below="@+id/textView_seleccionarSector"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"
        android:alpha=".9"
        android:text="@string/button_realizar_consulta"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="botonConsultar"
        android:nestedScrollingEnabled="false" />
</RelativeLayout>
